[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/PracticeTester/editor_ui/UIPracticesDock.gd" type="Script" id=1]
[ext_resource path="res://addons/PracticeTester/editor_ui/UIResetButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/PracticeTester/editor_ui/UISuccessLabel.tscn" type="PackedScene" id=3]

[node name="Practices" type="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 1073.0
script = ExtResource( 1 )

[node name="Column" type="VBoxContainer" parent="."]
margin_right = 346.0
margin_bottom = 1066.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Column"]
margin_right = 346.0
margin_bottom = 14.0
text = "Progress:"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="Column"]
margin_top = 18.0
margin_right = 346.0
margin_bottom = 46.0

[node name="ProgressBar" type="ProgressBar" parent="Column/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 339.0
margin_bottom = 21.0
max_value = 1.0

[node name="HSeparator" type="HSeparator" parent="Column"]
margin_top = 50.0
margin_right = 346.0
margin_bottom = 54.0

[node name="ScrollContainer" type="ScrollContainer" parent="Column"]
margin_top = 58.0
margin_right = 346.0
margin_bottom = 1008.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Column" type="VBoxContainer" parent="Column/ScrollContainer"]
margin_right = 346.0
margin_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SuccessLabel" parent="Column" instance=ExtResource( 3 )]

[node name="UIResetButton" parent="Column" instance=ExtResource( 2 )]
margin_top = 1012.0
margin_right = 346.0
margin_bottom = 1066.0

[node name="PollTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true
